Fix card gap

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -114,7 +114,7 @@
 .card-grid {
   display: grid;
   justify-items: center;
-  gap: 50px;
+  gap: 100px;
   grid-template-rows: 300px;
   grid-template-columns: 300px;
 }
