--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -318,7 +318,7 @@ footer {
 .card-grid {
   display: grid;
   justify-items: center;
-  gap: 50px;
+  gap: 100px;
   grid-template-rows: 300px;
   grid-template-columns: 300px;
 }
